--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="component">
   <div class="row">
-    <h1>Practica 1</h1>
     <app-distancia></app-distancia>
+    <app-zodiaco></app-zodiaco> 
+    <app-axb></app-axb>
   </div>
 </div>
