--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="component">
+<!--<div class="component">
   <div class="row">
     <app-distancia></app-distancia>
     <app-zodiaco></app-zodiaco> 
-    <app-axb></app-axb>
-  </div>
-</div>
+    <app-axb></app-axb>-->
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+  <!--</div>
+</div>-->
