--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
     <app-zodiaco></app-zodiaco> 
     <app-axb></app-axb>-->
     <app-navbar></app-navbar>
+    <app-temp></app-temp>
     <router-outlet></router-outlet>
+   
   <!--</div>
 </div>-->
